[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trac_optimizer"]

[project]
name = "trac_optimizer"
version = "0.0.1"
authors = [
  { name="Aneesh Muppidi", email="aneeshmuppidi@college.harvard.edu" },
]
description = "Official implementation of the TRAC optimizer in Fast TRAC: A Parameter-Free Optimizer for Lifelong Reinforcement Learning."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://computationalrobotics.seas.harvard.edu/TRAC/"
Issues = "https://github.com/ComputationalRobotics/TRAC/issues"